--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,24 @@
 language: c
 compiler:
-  - gcc
-  - clang
+  - gcc-4.7
+  - gcc-4.9
+  - gcc-5
+  - gcc-6
+  - clang-3.6
+  - clang-3.8
+
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+      - llvm-toolchain-precise-3.6
+      - llvm-toolchain-precise-3.8
+    packages:
+      - gcc-4.7
+      - gcc-4.9
+      - gcc-5
+      - gcc-6
+      - clang-3.6
+      - clang-3.8
 
 script: make
